Bidhan: changing images on hover complete

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -84,18 +84,7 @@ border-radius: 15px;
 right: -48%;
 position: relative;
 }
-.bike_details {
-background: black;
-color: white;
-border-radius: 5px;
-padding: 5px;
-margin: 5px;
-font-weight: bold;
-}
-.result {
-border: solid 1px black;
-border-radius: 7px;
-}
+
 
 //Background image gradient
 body {
@@ -116,3 +105,29 @@ height: 31px;
 color: white;
 font-weight: bold;
 }
+//*****************************SHOW PAGE***********************************************************
+//***************************************************************************************************
+.bike_details {
+background: black;
+color: white;
+border-radius: 5px;
+padding: 5px;
+margin: 5px;
+font-weight: bold;
+}
+.result {
+border: solid 1px black;
+border-radius: 7px;
+}
+//***************************************Images*************************************************
+.image_list li {
+margin-left: 0;
+list-style: none;
+padding-top: 5px;
+display: inline;
+}
+#bike_picture {
+padding-bottom: 9px;
+}
+//**********************************END OF SHOW PAGE*************************************************
+//####################################################################################################
