--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -45,9 +45,7 @@ margin-bottom: 15px;
 padding-left: 5px;
 
 }
-#title {
-color: white;
-}
+
 .table th, .table td {
 padding: 8px;
 line-height: 18px;
@@ -56,7 +54,7 @@ vertical-align: top;
 border-top: 1px solid rgba(221, 221, 221, 0);
 }
 .table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
-background-color: #F1F1F1;
+background-color: #e1eaf3;
 border-radius:15px;
 }
 .btn.btn-primary {
@@ -131,3 +129,13 @@ padding-bottom: 9px;
 }
 //**********************************END OF SHOW PAGE*************************************************
 //####################################################################################################
+.result_table {
+width: 100%;
+border-bottom: solid 1px grey;
+}
+.btn.btn-inverse {
+color: white;
+}
+div.search_result_div a{
+	color: #666;
+}
