Bidhan: Facebook integration Done and next and previous button in show page

--- a/app/views/bikes/_search_bikes.html.erb
+++ b/app/views/bikes/_search_bikes.html.erb
@@ -19,7 +19,7 @@
         
         
       <div class= "search_result_div">
-        <a href="<%= bike_path(bike) %>">
+        <a href="<%= bike_path(bike, sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: nil,type: params[:type] ) %>">
 <div class="row">
    
   <div class= "span5"> 
@@ -52,7 +52,7 @@
           <td>
             
             <%= link_to 'View bike',
-                        bike_path(bike), :class => 'btn btn-inverse' %>
+                        bike_path(bike, sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: params[:type]), :class => 'btn btn-inverse' %>
           </td>
         </tr>
       </table>
