--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -6,50 +6,8 @@
   <div class="span12">
     <div class="row">
     <div class="span3">
-            <div class="well sidebar-nav">
-                <ul class="nav nav-list">    
-                <li class="nav-header">Current Selection</li>
-                    <% if !@type_selection.nil?%>
-                        <li>
-                        
-
-                        <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: nil )%>"><%= @type_selection %>   <i class = "icon-remove"></i></a>
-                        </li>
-                    <%end%>
-
-                    <% if !@body_selection.nil?%>
-                        <li>
-                        
-
-                        <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: nil, make: params[:make], model: params[:model], color: params[:color],type: params[:type] )%>"><%= @body_selection %>   <i class = "icon-remove"></i></a>
-                        </li>
-                    <%end%>
-                    <% if !@make_selection.nil?%>
-                        <li>
-                        
-
-                        <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: nil, model: nil, color: params[:color],type: params[:type] )%>"><%= @make_selection %>   <i class = "icon-remove"></i></a>
-                        </li>
-                    <%end%>
-                    <% if !@model_selection.nil?%>
-                        <li>
-                        
-
-                        <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: nil, color: params[:color],type: params[:type] )%>"><%= @model_selection %>   <i class = "icon-remove"></i></a>
-                        </li>
-                    <%end%>
-                    <% if !@color_selection.nil?%>
-                        <li>
-                        <div>
-
-                        <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: nil,type: params[:type] )%>"><%= @color_selection %>   <i class = "icon-remove"></i></a>
-                    </div>
-                        </li>
-                    <%end%>                        
-
-            </ul>
-          
-            </div> 
+    
+        <%= render "current_selection"%>   
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
                 <li class="nav-header">Sidebar</li>
@@ -68,7 +26,7 @@
                 <li>Body
                     <ul>
                         <li>
-                            <a href= <%= bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type], body: "Sports") %>>Sports</a>
+                            <a href= <%= bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type], body: "Sports") %>>Sports(<%=@bikes.where(body:"Sports").count%>)</a>
                         </li>
                     </ul>
                 </li>
@@ -106,7 +64,7 @@
 
 <div class="span9">    
 <div class = "bikes">
-<%=render "bikes"%>
+<%=render "search_bikes"%>
 </div>
 </div>
 </div>
