--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,26 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Bikesales</a>
+          <a class="brand" href="/">Bikesales</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
+              <li><%= link_to "Create Ad", new_bike_path  %></li>
+              <li><%= link_to "Bike Spec Page", bike_specs_path  %></li>
+              
+            </ul>
+            <ul class = "nav pull-right">  
               <% if user_signed_in?%>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: "delete"  %></li>
+              <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          <i class="icon-user icon-white"></i><%=current_user.name%> <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                          <li><%= link_to "Profile", profile_user_path(current_user)%></li>
+
+                          <li class="divider"></li>
+                          <li><%= link_to "Sign Out", destroy_user_session_path, method: "delete"  %></li>
+                        </ul>
+                </li>
+              
               <%else%>
               <li><%= link_to "Sign in", new_user_session_path%></li>
               <%end%>
