Bidhan: auto load on scroll working condition, and able to load one image to  a bike

--- a/app/views/bikes/_form.html.erb
+++ b/app/views/bikes/_form.html.erb
@@ -97,7 +97,7 @@
       <%= f.text_field :comment, :class => 'text_field' %>
     </div>
   </div>
-
+ <%= f.file_field :avatar %>
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
