--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -139,3 +139,26 @@ color: white;
 div.search_result_div a{
 	color: #666;
 }
+//##############################facebook login model#################################
+.facebook_login {
+width: 285px;
+font-size: 1.6em;
+text-shadow: 0 -1px #000000;
+padding: 10px 0 10px 20px;
+text-align: left;
+border-radius: 4px;
+background: #3b5998;
+box-shadow: 5px 5px 4px #888888;
+background-image: url(facebook.gif);
+background-repeat: no-repeat;
+background-position: left center;
+background-size: 21px 20px;
+}
+#facebook-signin {
+color: white;
+padding-left: 16px;
+}
+#facebook-signin:hover {
+background: transparent;
+text-decoration: none;
+}
