--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
                 </li>
               
               <%else%>
-              <li><%= link_to "Sign in", new_user_session_path%></li>
+              <li><a href="#myModal" data-toggle="modal">Sign in</a></li>
               <%end%>
             </ul>
           </div><!--/.nav-collapse -->
@@ -101,5 +101,33 @@
         </div>
       </div>
     </div>
+    
+ 
+<!-- Modal -->
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">Sign In</h3>
+      </div>
+      <div class="modal-body"><div class= "modal_body">
+        <p><a href = "<%=user_omniauth_authorize_path(:facebook)%>" id= "facebook-signin"> 
+          <div class = "facebook_login">
+            Sign In with Facebook
+          </div>
+        </a>
+        </p>
+        <%= link_to "I dont have a facebook account. Sign up with email", new_user_session_path %>
+        </div>
+        </div>
+        <div class="modal-footer">
+        
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+     
+      </div>
+    </div>
+
   </body>
 </html>
+<script type="text/javascript">
+$(div.modal_body).load("<%=new_user_path%>")
+</script>
