Bidhan: multiple upload complete for pictures.......expanding and minimizing seletions done

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -36,7 +36,7 @@ body {
 margin-left: 0px;
 }.row-fluid {
 width: 80%;
-margin-left: 10%;
+margin-left: 8%;
 }
 .ad_title {
 background: grey;
@@ -162,3 +162,34 @@ padding-left: 16px;
 background: transparent;
 text-decoration: none;
 }
+#new_bike {
+margin-left: 3px;
+}
+#sponsored_links {
+margin-left: 3px;
+}
+.input-large {
+width: 95%;
+}
+.input-drop-down {
+width: 99%;
+}
+.new_bike_make_table td ul {
+font-size: 11px;
+}
+@media (max-width: 810px){
+.modal.fade.in {
+top: 35%;
+}
+.container-fluid {
+padding-right: 0px;
+padding-left: 0px;
+}
+.row-fluid {
+width: 100%;
+margin-left: 0%;
+}}
+@media (min-width: 811px) and (max-width: 1080px){
+.modal.fade.in {
+top: 70%;
+}}
