--- a/app/views/bikes/_current_selection.html.erb
+++ b/app/views/bikes/_current_selection.html.erb
@@ -41,5 +41,13 @@
                 </div>
                 </li>
             <%end%>
+            <% if !@location_selection.nil?%>
+                <li>
+                <div>
+
+                <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: params[:type], location:nil )%>"><%= @location_selection %>   <i class = "icon-remove"></i></a>
+                </div>
+                </li>
+            <%end%>
         </ul>
     </div>
