--- a/app/views/bikes/change_variant.js.erb
+++ b/app/views/bikes/change_variant.js.erb
@@ -1,5 +1,5 @@
-
-  $("select#bike_variant").empty();
+var option = $('<option></option>').attr("value", "").text("Select Variant");
+ $("select#bike_variant").append(option);
   
 <% @bikes.each do |variant|%>
 console.log("<%=variant%>");
