--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -16,14 +16,14 @@
 <div class= "span12">
   <div class= "span6">
     <div class = "main_page">
-    <%=render "main_page"%>
+    <%=render "main_search_tool"%>
     </div>
   </div>
-  <div class= "span3">
-    <%=render "main_page1"%>    
+  <div id= "new_bike"class= "span3">
+    <%=render "new_bike"%>    
   </div>
-  <div class= "span3">
-    <%=render "main_page2"%>    
+  <div  id = "sponsored_links" class= "span3">
+    <%=render "sponsored_links"%>    
   </div>
 
 </div>
